--- a/assets/css/wikinotes.less
+++ b/assets/css/wikinotes.less
@@ -56,6 +56,7 @@ section {
 	}
 
 	a { color: #FFF; font-weight: bold; }
+	p { padding-bottom: 0px; } // otherwise there's whitespace under the footer
 }
 
 #header {
